--- a/package.json
+++ b/package.json
@@ -53,6 +53,13 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@saberhq/solana-contrib": "^1.12.6",
+    "@saberhq/token-utils": "^1.12.6",
+    "@saberhq/use-solana": "^1.12.6",
+    "@solana/web3.js": "^1.31.0",
+    "@gokiprotocol/walletkit": "^1.6.4",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
@@ -62,7 +69,7 @@
     "@types/react-dom": "17.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.0",
     "react-unity-webgl": "latest",
     "typescript": "4.4.4",
     "web-vitals": "2.1.2"
